# hdb

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: compiler_warnings.cmake  lld.toolchain.cmake
lib/: CMakeLists.txt  libhdb.ixx
lib/hdb/: CMakeLists.txt  aarch64.cpp  bits.cpp  clap.cpp  common.cpp  config.cpp.in  enums.cpp  error.cpp  libhdb.cpp  meta.cpp  pipe.cpp  process.cpp  registers.cpp  registers.inc
lib/readline/: CMakeLists.txt  readline.cpp
test/: CMakeLists.txt  process.cpp
test/targets/: CMakeLists.txt  endless.cpp  rwrite.s
tools/: CMakeLists.txt  hdb.cpp
vcpkg/triplets/: x64-linux-libcxx.cmake
